trunk/Archive2/85/fa9ecabc222cdd/output
main.cpp:6:21: error: ‘Card’ has not been declared
     bool operator()(Card a, Card b) {
                     ^
main.cpp:6:29: error: ‘Card’ has not been declared
     bool operator()(Card a, Card b) {
                             ^
main.cpp: In member function ‘bool<anonymous struct>::operator()(int, int)’:
main.cpp:7:16: error: request for member ‘face_index’ in ‘a’, which is of non-class type ‘int’
      return (a.face_index() < b.face_index());   
                ^
main.cpp:7:33: error: request for member ‘face_index’ in ‘b’, which is of non-class type ‘int’
      return (a.face_index() < b.face_index());   
                                 ^
main.cpp: At global scope:
main.cpp:11:1: error: expected initializer before ‘std’
 std::sort(hand.begin(), hand.end(), cmp_cards);
 ^
